# ragPullRequest

./: .gitignore  Dockerfile  README.md  celerybeat-schedule  config.py  docker-compose.yml  pyproject.toml  worker.py
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_github_review_id_and_comment_id.py  bf2430722724_first.py
api/: dependencies.py  main.py
api/handlers/: feedback.py  indexing.py  installation.py  review.py
api/routes/: index.py  search.py  webhook.py
db/: models.py  session.py
docs/superpowers/plans/: 2026-05-12-pr-reviewer-implementation.md  2026-05-13-phase1-infrastructure.md  2026-05-13-phase1-rag-pipeline.md  2026-05-13-phase2-indexing-pipeline.md  2026-05-13-phase2-infrastructure.md  2026-05-13-phase3-github-bot.md  2026-05-13-phase3-github-integration.md  2026-05-13-phase4-observability-deploy.md  2026-06-01-langchain-migration.md
docs/superpowers/specs/: 2026-05-12-pr-reviewer-design.md
gh_app/: auth.py  client.py  events.py
github/: auth.py  client.py
indexer/: embedder.py  tasks 2.py  tasks.py
pipeline/: chunker.py  embedder.py  generator.py  qdrant_store.py  retriever.py
pipleline/: generator.py
scripts/: index_repo.py  review_pipeline.py
tests/: hello.py  test_chunker.py  test_embedder.py  test_generator.py
