[tool.poetry]
name = "rag-pr-reviewer"
version = "0.1.0"
description = "AI-powered PR reviewer with codebase context"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
openai = "^1.30.0"
qdrant-client = {extras = ["async"], version = "^1.9.1"}
PyJWT = {extras = ["cryptography"], version = "^2.8.0"}
cryptography = "^42.0.5"
PyGithub = "^2.3.0"
unidiff = "^0.7.5"
tree-sitter = "^0.23.2"
tree-sitter-python = "^0.23.6"
sentence-transformers = "^2.7.0"
langfuse = "^2.36.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]